--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "v": "node -v"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-burger-menu": "^2.8.5",
     "next": "^14.0.1",
     "node": "18.17.0",
