--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-burger-menu": "^2.8.5",
+    "chart.js": "^4.4.0",
+    "moment": "^2.29.4",
     "next": "^14.0.1",
     "node": "18.17.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.9.3"
   },
   "devDependencies": {
     "@types/node": "^20",
