--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.9.3"
   },
