--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-burger-menu": "^2.8.5",
+    "@types/react-qr-reader": "^2.1.7",
     "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "next": "^14.0.1",
@@ -23,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "recharts": "^2.9.3"
   },
   "devDependencies": {
